# trading_sim_v2

./: .gitignore  README.md  adjust_corporate_actions.py  nav_spike_auditor.ipynb  pyproject.toml  repair_matrix_store_corporate_actions.ipynb  repair_matrix_store_intraday_anomalies.ipynb  requirements-ui.txt  requirements.txt  research.ipynb  research_understand.ipynb  sanitized_matrix_store_feed_walkthrough.ipynb  test_parquet.py
analytics/: README.md  build.py  nav_spike_audit.py
common/: README.md  eventlog.py  events.py
configs/: README.md
configs/execution/: paper_fixed_bps.yaml
configs/market_feed/: cube_feed.yaml  cube_feed_repaired.yaml  folder_csv_1m.yaml  folder_csv_1m_autodiscover.yaml  matrix_store_1m.yaml  sanitized_cube_feed.yaml  synth_1m.yaml
configs/preprocess/: cube_only_preprocess.yaml  nifty500_1m_store.yaml
configs/run/: run.yaml  (+9 more)
execution/: README.md  paper.py  portfolio.py  slippage.py
levitate_trading_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
market_feed/: README.md  __init__.py  base.py  folder_1m.py  matrix_store_1m.py  sanitized_matrix_store_1m.py  synthetic.py
preprocess/: README.md  __init__.py  __main__.py  build.py  intraday_anomaly_repair.py
runner/: README.md  __main__.py  cli.py  config.py  engine.py  logging_utils.py  run.py
scripts/: README.md  debug_zmq.py  run_demo.sh
strategy/: README.md  ema_long.py  sparse_sortino_optimizer.py  toy_rebalance.py  xs_mom_vol_ema_stop.py  xs_mom_vol_target.py
tests/: README.md
ui/: README.md  live_dashboard.py  qt_dashboard.py
(+27 files in other folders)
